Problem5 문제 해결