@@ -1,11 +1,23 @@
 package onboarding;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class Problem5 {
-    public static List<Integer> solution(int money) {
-        List<Integer> answer = Collections.emptyList();
+    public static List<Integer> solve(int money) {
+        List<Integer> answer = new ArrayList<>();
+        List<Integer> changeList = List.of(50000, 10000, 5000, 1000, 500, 100, 50, 10, 1);
+
+        for (int i = 0; i < changeList.size(); i++) {
+            answer.add(money / changeList.get(i));
+            money %= changeList.get(i);
+        }
+
         return answer;
+    }
+
+    public static List<Integer> solution(int money) {
+        return solve(money);
     }
 }
